Carles: Make scrollbar visible again and adapt boxes CSS. Fix last box misbehaviour. Fix hamburger icon not fixed bug

--- a/apps/carles-capellas/sass/boxes.scss
+++ b/apps/carles-capellas/sass/boxes.scss
@@ -12,6 +12,10 @@
     top: 100vh;
 }
 
+.box:last-child .box-content.pushed-down {
+    top: 0;
+}
+
 .box-content.centered {
     display: flex;
     align-items: center;
@@ -30,8 +34,8 @@
 	}
 }
 
-@mixin boxes-size($containerSelector, $spacing, $smallSize, $mediumSize, $bigSize) {
-	$viewportWidth: 100vw - $spacing;
+@mixin boxes-size($containerSelector, $scrollBarWidth, $spacing, $smallSize, $mediumSize, $bigSize) {
+	$viewportWidth: 100vw - $spacing - $scrollBarWidth;
 	$smallSize: $smallSize * $viewportWidth - $spacing;
 	$mediumSize: $mediumSize * $viewportWidth - $spacing;
 	$bigSize: $bigSize * $viewportWidth - $spacing;
@@ -69,8 +73,8 @@
 	}
 }
 
-@mixin boxes-size-media($containerSelector, $spacing, $smallSize, $mediumSize, $bigSize, $breakpoint) {
+@mixin boxes-size-media($containerSelector, $scrollBarWidth, $spacing, $smallSize, $mediumSize, $bigSize, $breakpoint) {
 	@media(min-width: $breakpoint) {
-		@include boxes-size($containerSelector, $spacing, $smallSize, $mediumSize, $bigSize);
+		@include boxes-size($containerSelector, $scrollBarWidth, $spacing, $smallSize, $mediumSize, $bigSize);
 	}
 }
