--- a/apps/carles-capellas/sass/main.scss
+++ b/apps/carles-capellas/sass/main.scss
@@ -2,19 +2,28 @@
 @import 'flipper';
 @import 'hamburger-icon';
 
+$scrollBarWidth: 1vw;
 $lgBreakpoint: 992px;
 
-::-webkit-scrollbar {
-    width: 0px;
+::-webkit-scrollbar
+{
+	width: $scrollBarWidth;
+	position: absolute;
 }
+
+::-webkit-scrollbar-track
+{
+	background: rgba(0, 0, 0, 0.05);
+}
+
+::-webkit-scrollbar-thumb
+{
+	background: rgba(0, 0, 0, 0.1);
+} 
 
 html, body {
 	height: 100%;
 	margin: 0;
-}
-
-body {
-	perspective: 5000px;
 }
 
 img {
@@ -22,8 +31,8 @@ img {
 }
 
 @include init-boxes-container('.front');
-@include boxes-size('.front', 3vw, 0.5, 0.7, 1); 							// Small devices
-@include boxes-size-media('.front', 2vw, 0.2, 0.3, 0.5, $lgBreakpoint);		// Desktop devices
+@include boxes-size('.front', $scrollBarWidth, 3vw, 0.5, 0.7, 1); 							// Small devices
+@include boxes-size-media('.front', $scrollBarWidth, 2vw, 0.2, 0.3, 0.5, $lgBreakpoint);		// Desktop devices
 
 
 //TEMP ---------------------
